--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@ h1 {
   color: orange;
   text-align: center;
 }
+
+h2 {
+  text-align: center;
+}
+
+body {
+  background-color: lightblue;
+}
+
+p.inset {border-style: inset;}
