--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@ h2 {
 }
 
 body {
-  background-color: lightblue;
+  background-color: darkgray;
 }
 
 p.inset {border-style: inset;}
+
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
